[gd_scene load_steps=4 format=2]

[ext_resource path="res://NodeEditor.gd" type="Script" id=1]
[ext_resource path="res://nodeeditor/Editor.tscn" type="PackedScene" id=2]

[sub_resource type="GDScript" id=1]

script/source = "extends MenuButton

var popup
var editor

func _ready():
	editor = get_node(\"../GraphEdit\")
	popup = get_popup()
	popup.add_item(\"Add\", 0)
	popup.add_item(\"Subtract\", 1)
	popup.add_item(\"Multiply\", 2)
	popup.add_item(\"Divide\", 3)
	popup.add_item(\"Switch\", 4)
	popup.connect(\"id_pressed\", self, \"_on_item_pressed\")

func _on_item_pressed(ID):
	editor.add_node(ID)
"

[node name="NodeEditor" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="GraphEdit" parent="." index="0" instance=ExtResource( 2 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 60.0
margin_right = -4.0
margin_bottom = 0.0
_sections_unfolded = [ "Anchor", "Visibility" ]

[node name="DeleteNode" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Delete Node"
flat = false
align = 1

[node name="AddNodeMenu" type="MenuButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 120.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Add Node"
flat = false
align = 1
items = [  ]
script = SubResource( 1 )

[node name="Compile" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 250.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Compile"
flat = false
align = 1

[connection signal="pressed" from="DeleteNode" to="." method="_on_DeleteNode_pressed"]

[connection signal="pressed" from="Compile" to="." method="_on_Compile_pressed"]


